# aoc_helper

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: day01.rs  day01_macro.rs  day01_main.rs  empty_macro.rs
src/: input.rs  lib.rs  template.rs
