[package]
name = "aoc_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.3.1", features = ["charset"] }
criterion = "0.3.5"
colored = "2.0.0"
anyhow = "1.0.50"
dotenv = "0.15"
structopt = "0.3.25"

[dev-dependencies]
itertools = "0.10.1"
serde_scan = "0.4.1"
